go-web-app/k8s/manifest/service.yml
apiVersion: v1
kind: Service
metadata:
  name: go-app-service
spec:
  type : ClusterIP
  selector:
    app.kubernetes.io/name: go-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
