go-web-app/k8s/manifest/Ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: go-app
  annotations:
  #  kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: go-app
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: go-app-service
            port:
              number: 80
